# Face-Recognition-Model

./: .gitignore  README.md  labels.npy  labels2.npy  pyproject.toml  users.csv
src/: face_recognize.py  face_train.py  main.py
