[tool.poetry]
name = "face-recognition-attendance-system"
version = "0.1.0"
description = ""
authors = ["varun-s22 <93476421+varun-s22@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.5.5"
opencv-contrib-python = "^4.5.5"
PyQt6 = "^6.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
